--- a/chess.html
+++ b/chess.html
@@ -416,27 +416,46 @@
 
         "horse":function(chess, x, y){
 
-            var arr = [{x:-100,y:-50},{x:-50,y:-100},{x:50,y:-100},{x:100,y:-50},{x:100,y:50},{x:50,y:100},{x:-50,y:100},{x:-100,y:50}]
+            // 获取落点位置
+            var pos = getRelativePos(chess,x,y);
 
-            for(let i = 0;i<arr.length;i++){
-
-                if(x-chess.x == arr[i].x && y-chess.y == arr[i].y){
-                    return landing(chess,x,y);
-                }
+            // 如果走法不是按照'日'字格走则返回。
+            if(Math.abs(pos.x)/Math.abs(pos.y) != 2 && Math.abs(pos.y)/Math.abs(pos.x) != 2){
+                console.error('马','请按日字格走')
+                return chess;
             }
-            return chess;
+            // 如果是按'日'字格，但是较长的那一边不能有棋子
+            if(hasChess(Math.abs(pos.x)/Math.abs(pos.y) == 2 ? (x+chess.x)/2 : chess.x , Math.abs(pos.x)/Math.abs(pos.y) == 2 ? chess.y : (y+chess.y)/2)){
+                console.error('马','有障碍');
+                return chess;
+            }
+            // 棋子下落
+            return landing(chess,x,y);
+
+            // 判断逻辑太落后，弃用
+            // var arr = [{x:-100,y:-50},{x:-50,y:-100},{x:50,y:-100},{x:100,y:-50},{x:100,y:50},{x:50,y:100},{x:-50,y:100},{x:-100,y:50}]
+            //
+            // for(let i = 0;i<arr.length;i++){
+            //
+            //     if(x-chess.x == arr[i].x && y-chess.y == arr[i].y){
+            //         return landing(chess,x,y);
+            //     }
+            // }
+            // return chess;
 
         },
         "car":function (chess, x, y) {
             // 判断是否是直线
             if(chess.x != x && chess.y != y){
+                console.error('车',"请走直线");
                 return chess;
             }
             // 移动路线中间不能有其他棋子
             var count = countChessBetweenRoute(chess,x,y);
-            console.log("count:",count)
+
             if(count != 0){
                 // 中间有棋子 ，走不了
+                console.error('车',"不能跨越棋子")
                 return chess;
             }
             // 中间没有棋子 可以走
@@ -489,6 +508,11 @@
                 return chess;
             }
 
+            // 如果是跨越某个棋子，落点必须是地方棋子，否则走法无效
+            if(count == 1 &&!chessmans[chess.role == 'blue'? 'red':'blue'].hasChess(chess.id, x, y)){
+                return chess;
+            }
+
             return landing(chess,x,y);
         },
         "elephant":function (chess,x,y) {
@@ -507,6 +531,10 @@
 
             // 象的规则
             if(Math.abs(pos.x) != 2 || Math.abs(pos.y) != 2){
+                return chess;
+            }
+            // 走田字格中间不能有棋子
+            if(hasChess((chess.x+x)/2,(chess.y+y)/2)){
                 return chess;
             }
 
@@ -587,6 +615,18 @@
             x:(x-chess.x)/50,
             y:(y-chess.y)/50
         }
+    }
+
+    // 判断指定位置是否存在棋子
+    function hasChess(x,y) {
+        var arr = chessmans.blue.concat(chessmans.red);
+
+        for(var i = 0;i<arr.length;i++){
+            if(arr[i].x == x && arr[i].y == y){
+                return true;
+            }
+        }
+        return false;
     }
 
     function checkBound(chess,x,y){
@@ -678,8 +718,6 @@
             var chess = getChess(dataset);
 
             var new_chess = rule_base[chess.type](chess,x,y);
-
-            console.log(new_chess === chess);
 
             $curr.css({
                 "top":new_chess.y,
