--- a/test.html
+++ b/test.html
@@ -24,14 +24,24 @@
 
     <!--进入游戏，显示游戏房间，并且有创建房间的按钮-->
     <div class="input-login game-square" style="display: none;">
-        <h3>象 棋</h3>
-        <input type="text" placeholder="输入房间名称" id="roomname">
-        <button id="addroom">创建房间</button>
-        <h6>房间列表</h6>
-        <ul class="rooms">
-            <p class="alert">暂时没有房间，可先创建房间</p>
+        <div class="creat-room">
+            <h3>象 棋</h3>
+            <input type="text" placeholder="输入房间名称" id="roomname">
+            <button id="addroom">创建房间</button>
+        </div>
+        <div class="rooms-info">
+            <h6>房间列表</h6>
+            <ul class="rooms">
+                <p class="alert">暂时没有房间，可先创建房间</p>
+            </ul>
+        </div>
+        <button class="startGame" style="width: 100%;display: none;">开始游戏</button>
+        <div class="my-room" style="display: none;">
+            <h6>用户列表</h6>
+            <ul class="rooms users">
 
-        </ul>
+            </ul>
+        </div>
     </div>
 </div>
 
@@ -61,7 +71,7 @@
         }
         SetCookie('nickname',$('#nickname').val())
         var nickname = $('#nickname').val();
-        // http://127.0.0.1:3001默认是大厅，在大厅可以和大厅内的任何人聊天
+        // http://127.0.0.1:3001默认是大厅
         // 获取房间列表
         chess.connetNet('http://127.0.0.1:3001').then(function (socket) {
 
@@ -138,8 +148,53 @@
                 $('.game-square').show();
             })
 
+
             socket.on('roominfo',function (data) {
                 console.log(data.info);
+                $('.creat-room').hide();
+            })
+
+            // 创建房间后的反馈信息
+            socket.on('create_feedback',function (data) {
+                console.log(data.info);
+                $('.creat-room').hide();
+                // 渲染当前用户信息
+                $('.users').empty();
+                for(let i =0;i<data.room.users.length;i++){
+                    $('.users').append('<li class="room-item"><p>'+data.room.users[i].username+'</p></li>')
+                }
+                // 显示开始游戏
+                $('.startGame').show();
+            })
+
+            // 更新房间列表信息
+            socket.on('fresh_rooms',function (data) {
+                console.log(data.info);
+                chess.rooms = data.rooms;
+                if(chess.rooms.length == 0){
+                    $('.alert').show();
+                }else{
+                    $('.alert').hide();
+                    $('.rooms').empty();
+                    for(let i =0;i<chess.rooms.length;i++){
+                        $('.rooms').append('<li class="room-item"><p>'+chess.rooms[i].name+'</p><button class="toroom" data-name="'+chess.rooms[i].name+'">加入</button></li>')
+                    }
+                }
+            })
+
+            // 更新房间内信息
+            socket.on('fresh_room_info',function (data) {
+                $('.creat-room').hide();
+                console.log(data.info);
+                $('.rooms-info').hide();
+                $('.my-room').show();
+                $('.users').empty();
+                for(let i =0;i<data.room.users.length;i++){
+                    $('.users').append('<li class="room-item"><p>'+data.room.users[i].username+'</p></li>')
+                }
+                if(data.room.count == 2 && $('.startGame').length !=0){
+                    $('.startGame').addClass('canStart');
+                }
             })
         }).catch(function (error) {
             console.log(error);
@@ -154,8 +209,10 @@
         if(roomname == ''){
             return ;
         }
-
         chess.socket.emit('create_room',{roomname:roomname});
+        // 创建完房间应该跳到房间用户在线列表
+        $('.rooms-info').hide();
+        $('.my-room').show();
     })
 
     // 加入房间
@@ -163,9 +220,16 @@
         if($(e.target).data() == '' || $(e.target).data() == undefined || $(e.target).data() == null){
             return ;
         }
-        console.log('jiaru')
         // 加入房间
         chess.socket.emit('join',{roomname:$(e.target).data().name});
+    })
+
+    // 开始游戏
+    $('.startGame').on('click',function () {
+        if($('.canStart').length == 0){
+            return;
+        }
+        chess.socket.emit('startGame',{});
     })
 
 </script>
