--- a/visual_sort.html
+++ b/visual_sort.html
@@ -96,28 +96,45 @@
     }
 
     // 阮一峰版本，速度特别慢
+    // 网上指出阮一峰是错的（获取pivot使用spilce）。
+    // 我改成了直接通过下标获取中间值。
+    // 由于每次递归都新建了 left[] 和 right[] 所以占用空间会比较大
     // 快速排序
-    // function QuickSort(arr) {
-    //     if(arr.length <= 1){
-    //         return arr;
-    //     }
-    //     var pivotIndex=Math.floor(arr.length/2);
-    //     var pivot=arr.splice(pivotIndex,1)[0];
-    //     //定义左右数组
-    //     var left=[];
-    //     var right=[];
-    //     //比基准小的放在left，比基准大的放在right
-    //     for(var i=0;i<arr.length;i++){
-    //         if(arr[i]<=pivot){
-    //             left.push(arr[i]);
-    //         }
-    //         else{
-    //             right.push(arr[i]);
-    //         }
-    //     }
-    //     //递归
-    //     return QuickSort(left).concat([pivot],QuickSort(right));
-    // }
+    function QuickSort(arr) {
+        if(arr.length <= 1){
+            return arr;
+        }
+        var pivotIndex=Math.floor(arr.length/2);
+        var pivot=arr[pivotIndex];
+        //定义左右数组
+        var left=[];
+        var right=[];
+        //比基准小的放在left，比基准大的放在right
+        for(var i=0;i<arr.length;i++){
+            if(i != pivotIndex){
+                if(arr[i]<=pivot){
+                    left.push(arr[i]);
+                }
+                else{
+                    right.push(arr[i]);
+                }
+            }
+        }
+        //递归
+        return QuickSort(left).concat([pivot],QuickSort(right));
+    }
+
+    // 网上优化版
+    // https://juejin.im/post/5af4902a6fb9a07abf728c40
+
+
+    // 为了测试快速排序的时间
+    function quicksort(arr) {
+        console.time('快速排序');
+        var a =  QuickSort(arr);
+        console.timeEnd('快速排序');
+        return a;
+    }
 
     var arr = createRandomArr(10);
     console.group('一般情况');
@@ -125,9 +142,9 @@
     console.log(BubbleSort(arr));
     console.log(SelectSort(arr));
     console.log(InsertSort(arr));
-    console.time('快速排序');
-    console.log(QuickSort(arr));
-    console.timeEnd('快速排序')
+
+    console.log(quicksort(arr));
+
     // var best_arr = createBestArr(10);
     // console.group('最好情况');
     // console.log(best_arr);
