--- a/visual_sort.html
+++ b/visual_sort.html
@@ -86,8 +86,9 @@
                 if(arr[i] <= new_arr[j]){
                     new_arr.splice(j,0,arr[i]);
                     break;
-                }else if(j == new_arr.length-1){
+                }else if(j == new_arr.length - 1){
                     new_arr.push(arr[i]);
+                    break;
                 }
             }
         }
@@ -126,7 +127,54 @@
 
     // 网上优化版
     // https://juejin.im/post/5af4902a6fb9a07abf728c40
+    function OptimizeQuickSort(arr) {
+        console.time('优化版快速排序');
 
+        optimizequicksort(arr,0,arr.length - 1);
+
+        console.timeEnd('优化版快速排序');
+
+        //return new_arr;
+    }
+    function optimizequicksort(arr , left, right) {
+        var index ;
+        if(arr.length > 1){
+            index = partition(arr, left, right);
+            if(left < index -1){
+                optimizequicksort(arr, left, index-1);
+            }
+            if(index < right){
+                optimizequicksort(arr, index, right);
+            }
+        }
+        return arr;
+    }
+
+    function partition(arr, left, right) {
+        var pivotIndex = Math.floor((left+right)/2);
+        var pivot = arr[pivotIndex];
+
+        while(left <= right){
+            while (arr[left] < pivot){
+                left++;
+            }
+            while (arr[right] > pivot){
+                right--;
+            }
+            // 交换位置
+            if(left <= right){
+                var temp = arr[left];
+                arr[left] = arr[right];
+                arr[right] = temp;
+
+                // 继续循环
+                left++;
+                right--;
+            }
+        }
+        return left;
+
+    }
 
     // 为了测试快速排序的时间
     function quicksort(arr) {
@@ -137,19 +185,17 @@
     }
 
     var arr = createRandomArr(10);
+    var arr1 = arr.map(function (r) {
+        return r;
+    });
     console.group('一般情况');
     console.log(arr);
-    console.log(BubbleSort(arr));
-    console.log(SelectSort(arr));
-    console.log(InsertSort(arr));
+    // console.log(BubbleSort(arr));
+    // console.log(SelectSort(arr));
+    // console.log(InsertSort(arr));
+    OptimizeQuickSort(arr1);
+    console.log(arr1);
 
-    console.log(quicksort(arr));
-
-    // var best_arr = createBestArr(10);
-    // console.group('最好情况');
-    // console.log(best_arr);
-    // console.log(BubbleSort(best_arr));
-    // console.log(SelectSort(best_arr));
 </script>
 </body>
 </html>
